added base controller and attempt to load settings

--- a/PlexLander/appsettings.json
+++ b/PlexLander/appsettings.json
@@ -4,5 +4,9 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "AppSettings": {
+    "Hostname" : "kekonn.ddns.net", //TODO: only for debugging purposes
+    "PlexUrl": "http://{0}/web"
   }
 }
