Now passing data properly to view

--- a/PlexLander/appsettings.json
+++ b/PlexLander/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AppSettings": {
     "Hostname" : "kekonn.ddns.net", //TODO: only for debugging purposes
-    "PlexUrl": "http://{0}/web"
+    "PlexPath": "/web",
+    "Transport": "http"
   }
 }
