Added servername setting

--- a/PlexLander/appsettings.json
+++ b/PlexLander/appsettings.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PlexLander;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "ServerName": "Volk"
 }
