Work on main layout and BaseViewModel

--- a/PlexLander/appsettings.json
+++ b/PlexLander/appsettings.json
@@ -8,5 +8,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PlexLander;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "ServerName": "Volk"
+  "ServerConfiguration": {
+    "ServerName" : "Volk"
+  }
 }
