little bit of cleanup, setup resources for what's new branch.

--- a/PlexLander/appsettings.json
+++ b/PlexLander/appsettings.json
@@ -13,6 +13,8 @@
     "EnablePlex": "True",
     "PlexEndpoint": "https://localhost/plexapi",
     "PlexUrl": "https://localhost/plex",
-    "PlexIcon": "plex.png"
+    "PlexIcon": "plex.png",
+    "EnableWhatsNew": "True",
+    "WhatsNewIcon": "whatsnew.png"
   }
 }
