refactored services, added configurationmanager, more work on plexserver

--- a/PlexLander/PlexLander.csproj
+++ b/PlexLander/PlexLander.csproj
@@ -4,6 +4,15 @@
     <TargetFramework>net462</TargetFramework>
     <RuntimeIdentifier>win7-x86</RuntimeIdentifier>
     <UserSecretsId>7e82a2ce-a20b-4b24-b2a7-bdc0c5c3349f</UserSecretsId>
+    <Version>0.1.0</Version>
+    <Company>Jonas Van der Aa</Company>
+    <PackageLicenseUrl>https://github.com/bloodsplatter/PlexLander/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/bloodsplatter/PlexLander</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/bloodsplatter/PlexLander</RepositoryUrl>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
