Start debug server in https by default, added commentary to tag helper, passed PlexServerSettingsViewModel to view

--- a/PlexLander/Properties/launchSettings.json
+++ b/PlexLander/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:61457/",
+      "applicationUrl": "https://localhost:44353/",
       "sslPort": 44353
     }
   },
