--- a/PlexLander/bower.json
+++ b/PlexLander/bower.json
@@ -3,13 +3,14 @@
   "private": true,
   "dependencies": {
     "jquery": "2.2.0",
-    "jquery-validation": "1.16.0",
+    "jquery-validation": "1.17.0",
     "jquery-validation-unobtrusive": "3.2.6",
-    "bootstrap": "v3.3.7"
+    "bootstrap": "v3.3.7",
+    "bootstrap-toggle": "2.2.2"
   },
   "resolutions": {
     "bootstrap": "v4.0.0-alpha.6",
     "jquery": "1.9.1 - 3",
-    "jquery-validation": "1.16.0"
+    "jquery-validation": "1.17.0"
   }
 }
