still adding logging

--- a/PlexLander/app.config
+++ b/PlexLander/app.config
@@ -1,5 +1,22 @@
-﻿<configuration>
-   <runtime>
-      <gcServer enabled="true"/>
-   </runtime>
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<configuration>
+
+  <configSections>
+    <sectionGroup name="common">
+      <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
+    </sectionGroup>
+  </configSections>
+
+  <runtime>
+    <gcServer enabled="true" />
+  </runtime>
+
+  <common>
+    <logging>
+      <factoryAdapter type="Common.Logging.Simple.NLogLoggerFactoryAdapter, Common.Logging.NLog4412">
+        <arg key="configType" value="FILE" />
+        <arg key="configFile" value="~/NLog.config" />
+      </factoryAdapter>
+    </logging>
+  </common>
 </configuration>
