logging added, builds and runs without errors, still some config left to do

--- a/PlexLander/nlog.config
+++ b/PlexLander/nlog.config
@@ -5,9 +5,9 @@
   internalLogLevel="Warn">
   <targets>
     <target name="asyncPlex" xsi:type="AsyncWrapper">
-      <target name="plexLog" xsi:type="File" fileName="~/PlexService.log" />
+      <target name="plexLog" xsi:type="File" fileName="PlexService.log" />
     </target>
-    <target name="genLog" xsi:type="File" fileName="~/PlexLander.log" />
+    <target name="genLog" xsi:type="File" fileName="PlexLander.log" />
     <target name="devnull" xsi:type="Null" />
   </targets>
   <rules>
