logging set up correctly now

--- a/PlexLander/nlog.config
+++ b/PlexLander/nlog.config
@@ -11,8 +11,8 @@
     <target name="devnull" xsi:type="Null" />
   </targets>
   <rules>
-    <logger name="PlexService" minlevel="Trace" writeTo="asyncPlex" final="true"/>
+    <logger name="PlexLander.Plex.*" minlevel="Trace" writeTo="asyncPlex" final="true"/>
+    <logger name="Microsoft.*" minlevel="Trace" maxlevel="Error" writeTo="devnull" final="true" />
     <logger name="*" minlevel="Debug" writeTo="genLog" />
-    <logger name="Microsoft.*" writeTo="devnull" final="true" />
   </rules>
 </nlog>
