Logfile is only for debug, so we can log according to different rules for debug

--- a/PlexLander/NLog.debug.config
+++ b/PlexLander/NLog.debug.config
@@ -3,16 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   autoReload="true"
   internalLogLevel="Warn">
-  <targets>
-    <target name="asyncPlex" xsi:type="AsyncWrapper">
-      <target name="plexLog" xsi:type="File" fileName="PlexService.log" />
-    </target>
+  <targets async="true">
+    <default-target-parameters xsi:type="File" deleteOldFileOnStartup="true" />
+    <target name="plexLog" xsi:type="File" fileName="PlexService.log" />
     <target name="genLog" xsi:type="File" fileName="PlexLander.log" />
+  </targets>
+  <targets>
     <target name="devnull" xsi:type="Null" />
   </targets>
   <rules>
-    <logger name="PlexLander.Plex.*" minlevel="Trace" writeTo="asyncPlex" final="true"/>
-    <logger name="Microsoft.*" minlevel="Trace" maxlevel="Error" writeTo="devnull" final="true" />
+    <logger name="PlexLander.Plex.*" minlevel="Debug" writeTo="plexLog" final="true"/>
+    <logger name="Microsoft.*" maxlevel="Error" writeTo="devnull" final="true" />
     <logger name="*" minlevel="Debug" writeTo="genLog" />
   </rules>
 </nlog>
