--- a/PlexLander/NLog.debug.config
+++ b/PlexLander/NLog.debug.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  autoReload="true"
-  internalLogLevel="Warn">
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      throwConfigExceptions="true"
+      throwExceptions="true"
+      internalLogLevel="Info"
+      internalLogFile="NLog.debug.log">
   <targets async="true">
-    <default-target-parameters xsi:type="File" deleteOldFileOnStartup="true" />
+    <default-target-parameters xsi:type="File" deleteOldFileOnStartup="true"/>
     <target name="plexLog" xsi:type="File" fileName="PlexService.log" />
     <target name="genLog" xsi:type="File" fileName="PlexLander.log" />
   </targets>
@@ -12,8 +14,8 @@
     <target name="devnull" xsi:type="Null" />
   </targets>
   <rules>
-    <logger name="PlexLander.Plex.*" minlevel="Debug" writeTo="plexLog" final="true"/>
-    <logger name="Microsoft.*" maxlevel="Error" writeTo="devnull" final="true" />
-    <logger name="*" minlevel="Debug" writeTo="genLog" />
+    <logger name="PlexLander.Plex.*" writeTo="plexLog" final="true"/>
+    <logger name="Microsoft.*" minlevel="Trace" maxlevel="Error" writeTo="devnull" final="true" />
+    <logger name="*" minlevel="Trace" writeTo="genLog" />
   </rules>
 </nlog>
