small change to logging config so that messages from ms libraries go into separate log file

--- a/PlexLander/NLog.debug.config
+++ b/PlexLander/NLog.debug.config
@@ -9,13 +9,14 @@
     <default-target-parameters xsi:type="File" deleteOldFileOnStartup="true"/>
     <target name="plexLog" xsi:type="File" fileName="PlexService.log" />
     <target name="genLog" xsi:type="File" fileName="PlexLander.log" />
+    <target name="msLog" xsi:type="File" fileName="Server.log" />
   </targets>
   <targets>
     <target name="devnull" xsi:type="Null" />
   </targets>
   <rules>
     <logger name="PlexLander.Plex.*" writeTo="plexLog" final="true"/>
-    <logger name="Microsoft.*" minlevel="Trace" maxlevel="Error" writeTo="devnull" final="true" />
+    <logger name="Microsoft.*" minLevel="Info" writeTo="msLog" final="true" />
     <logger name="*" minlevel="Trace" writeTo="genLog" />
   </rules>
 </nlog>
