--- a/PlexLander/bower.json
+++ b/PlexLander/bower.json
@@ -2,15 +2,16 @@
   "name": "asp.net",
   "private": true,
   "dependencies": {
-    "jquery": "2.2.0",
+    "jquery": "3.3.1",
     "jquery-validation": "1.17.0",
-    "jquery-validation-unobtrusive": "3.2.6",
+    "jquery-validation-unobtrusive": "v3.2.9",
     "bootstrap": "v3.3.7",
     "bootstrap-toggle": "2.2.2"
   },
   "resolutions": {
     "bootstrap": "v4.0.0-alpha.6",
-    "jquery": "1.9.1 - 3",
-    "jquery-validation": "1.17.0"
+    "jquery": "3.3.1",
+    "jquery-validation": "1.17.0",
+    "jquery-validation-unobtrusive": "v3.2.9"
   }
 }
